# experi

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  input_file.md  meta.yaml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/: dependabot.yml
conda-recipe/: meta.yaml
docs/: Makefile  conf.py  examples.rst  index.rst  input_file.rst  installation.rst  interface.rst  intro_to_yaml.rst
examples/: README.md  crystal_liquid_interface.yml  demo.yml  launch_experi.py  pbs.yml  simple.yml  trimer_dynamics.yml
src/experi/: commands.py  pbs.py  run.py  scheduler.py  version.py
src/experirun/: run.py
test/: cli_test.py  commands_test.py  conftest.py  examples_test.py  experirun_test.py  iter_test.py  pbs_test.py  range_test.py  run_test.py  scheduler_test.py  variables_test.py
test/data/: experiment.yml  result.txt
test/data/iter/: append_test.yml  arange_keyword_test.yml  combine_test.yml  command_creates.yml  command_list_test.yml  command_trailing_newline.yml  cycle_iterator.yml  list_commands.yml  string_variables.yml  test01.yml  test02.yml  test03.yml  test04.yml  test05.yml  test06.yml  test07.yml  test08.yml  test09.yml  test10.yml  test11.yml  test12.yml  uniqueify_list_commands.yml  variable_list.yml  zip_product.yml
test/data/pbs/: experiment.yml  result.txt
test/data/scheduler/: experiment.yml
