[tool.poetry]
name = "experi"
version = "0.2.10"
description="An interface for managing computational experiments with many independent variables."
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
license = "MIT"
readme= "README.md"
documentation = "experi.readthedocs.io"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
packages = [
    { include = "experi", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
click = "*"
pyyaml = "*"
numpy = "*"

sphinx = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
sphinx-autobuild = {version = "*", optional = true}
sphinx-click = {version = "~1.4.0", optional = true}

[tool.poetry.dev-dependencies]
mypy = "*"
pylint = "*"
pytest = "*"
black = {version = "*", allows-prereleases = true}
coverage = "*"
pytest-cov = "*"
hypothesis = "*"
pip = "^18.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autobuild", "sphinx-rtd-theme", "sphinx-click"]

[tool.poetry.scripts]
experi = "experi.run:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
